# ActRoot

./: .gitignore  ActABreakChi2_8cxx.html  ActABreakChi2_8cxx__incl.map  ActABreakChi2_8cxx__incl.md5  ActABreakChi2_8h.html  ActABreakChi2_8h__incl.map  ActABreakChi2_8h__incl.md5  ActABreakChi2_8h_source.html  ActACleanBadFits_8cxx.html  ActACleanBadFits_8cxx__incl.map  ActACleanBadFits_8cxx__incl.md5  ActACleanBadFits_8h.html  ActACleanBadFits_8h__incl.map  ActACleanBadFits_8h__incl.md5  ActACleanBadFits_8h_source.html  ActACleanDeltas_8cxx.html  ActACleanDeltas_8cxx__incl.map  ActACleanDeltas_8cxx__incl.md5  ActACleanDeltas_8h.html  ActACleanDeltas_8h__incl.map  ActACleanDeltas_8h__incl.md5  ActACleanDeltas_8h_source.html  ActACleanPileUp_8cxx.html  ActACleanPileUp_8cxx__incl.map  ActACleanPileUp_8cxx__incl.md5  ActACleanPileUp_8h.html  ActACleanPileUp_8h__incl.map  ActACleanPileUp_8h__incl.md5  ActACleanPileUp_8h_source.html  ActACleanZs_8cxx.html  ActACleanZs_8cxx__incl.map  ActACleanZs_8cxx__incl.md5  ActACleanZs_8h.html  ActACleanZs_8h__incl.map  ActACleanZs_8h__incl.md5  ActACleanZs_8h_source.html  ActAClean_8cxx.html  ActAClean_8cxx__incl.map  ActAClean_8cxx__incl.md5  ActAClean_8h.html  (+593 more)
Algorithm/: ActAlgorithmLinkDef.hh
Algorithm/Actions/: ActABreakChi2.cxx  ActACleanBadFits.cxx  ActACleanDeltas.cxx  ActAFindRP.cxx  ActAFindRP.h  ActAFixFindRP.cxx  ActAFixFindRP.h  ActASplitRegion.cxx  ActASplitRegion.h
Algorithm/inc/: ActAlgoFuncs.h  ActMultiAction.h  ActTaskManager.h  ActVAction.h  ActVTask.h
Algorithm/src/: ActAlgoFuncs.cxx  ActMultiAction.cxx  ActTaskManager.cxx  ActVTask.cxx
Core/inc/: ActCalibrationManager.h  ActInputData.h  ActInputParser.h  ActOptions.h
Core/src/: ActCalibrationManager.cxx  ActInputData.cxx  ActInputParser.cxx  ActOptions.cxx
Data/: ActDataLinkDef.hh
Data/inc/: ActCluster.h  ActMergerData.h  ActMergerParameters.h  ActModularParameters.h  ActTPCData.h  ActTPCLegacyData.h  ActTPCParameters.h
Data/src/: ActCluster.cxx  ActMergerData.cxx  ActMergerParameters.cxx  ActModularParameters.cxx  ActSilParameters.cxx  ActTPCData.cxx  ActTPCParameters.cxx
Detectors/inc/: ActMergerData.h  ActMergerDetector.h  ActTPCDetector.h
Detectors/src/: ActDetectorManager.cxx  ActMergerDetector.cxx  ActTPCDetector.cxx
Geant4/macros/: vis.mac
Physics/inc/: ActKinematics.h  ActSRIM.h  ActSilSpecs.h
Physics/src/: ActKinematics.cxx  ActSRIM.cxx  ActSilMatrix.cxx  ActSilSpecs.cxx
Simulation/src/: ActCrossSection.cxx  ActKinematicGenerator.cxx
Utility/inc/: ActCutsManager.h
Utility/src/: ActEventPainter.cxx  ActHistogramPainter.cxx
cobo_libs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  makefile
cobo_libs/inc/: MCoboAsad.h.bck  MDetector.h  MEvent.h  MEvent.h.bck  MExperiment.h  MFMCommonFrame.h  MFMTypes.h  MFile.h  MTrack.h  MUnpacker.h  MVisu.h  Parameters.h.bck  Utils.h
cobo_libs/inc/.ccls-cache/@@media@Datos@ApuntesUSC@TESE@ACTAR_tracking@analysis_2022@ACTAR_ANALYSIS_LIGHT_root6@inc/: @usr@include@DllImport.h.blob  @usr@include@ESTLType.h.blob  @usr@include@Foption.h.blob  @usr@include@Math@ParamFunctor.h.blob  @usr@include@Math@Types.h.blob  @usr@include@RConfigure.h  @usr@include@RConfigure.h.blob  @usr@include@ROOT@EExecutionPolicy.hxx.blob  @usr@include@ROOT@RConfig.hxx.blob  @usr@include@ROOT@RStringView.hxx.blob  @usr@include@ROOT@TypeTraits.hxx.blob  @usr@include@RVersion.h.blob  @usr@include@Rtypes.h.blob  @usr@include@RtypesCore.h.blob  @usr@include@TArray.h.blob  @usr@include@TArrayC.h.blob  @usr@include@TArrayD.h.blob  @usr@include@TArrayF.h.blob  @usr@include@TArrayI.h.blob  @usr@include@TArrayS.h.blob  @usr@include@TAttAxis.h.blob  @usr@include@TAttFill.h.blob  @usr@include@TAttLine.h.blob  @usr@include@TAttMarker.h.blob  @usr@include@TAxis.h.blob  @usr@include@TBits.h.blob  @usr@include@TDataType.h.blob  @usr@include@TDictionary.h.blob  @usr@include@TError.h.blob  @usr@include@TF1.h.blob  @usr@include@TF1AbsComposition.h.blob  @usr@include@TFitResultPtr.h.blob  @usr@include@TFormula.h.blob  @usr@include@TGenericClassInfo.h.blob  @usr@include@TGraph.h.blob  @usr@include@TH1.h.blob  @usr@include@TH2.h.blob  @usr@include@TH2F.h.blob  @usr@include@TInterpreter.h.blob  @usr@include@TInterpreterValue.h.blob  (+274 more)
cobo_libs/libMFM/: MFMCommonFrame.cc  Makefile
cobo_libs/src/: Analyse.cpp  MDetector.cpp  MEvent.cpp  MExperiment.cpp  MFile.cpp  MUnpacker.cpp  MUnpacker.cpp.bck  MVisu.cpp  MyDict.C  TreatBaseline.cpp  TreatBaseline.cpp.bck  rootlogon.C
inc/: ActAnalyze.h  ActAnalyzer.h  ActCalibrations.h  ActClusteringResults.h  ActDBSCAN.h  ActDetectors.h  ActDraw.h  ActEvent.h  ActEventData.h  ActEventPlus.h  ActGlobals.h  ActHit.h  ActKinematics.h  ActLegacy.h  ActLine.h  ActParameters.h  ActRANSAC.h  ActRoot.h  ActRunManager.h  ActSRIM.h  ActSample.h  ActStructs.h  ActTrack.h  ActTrackGeometry.h  ActTrackPlus.h  ActUtils.h  Silicons.h  SimBeam.h  SimKinematics.h  SimSRIM.h  SimStructs.h  TrackPhysics.h  TriggersAndGates.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_d.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_5.js  classes_e.js  enums_3.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_14.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+11 more)
src/: ActAnalyze.cpp  ActAnalyzer.cpp  ActCalibrations.cpp  ActClusteringResults.cpp  ActDBSCAN.cpp  ActDetectors.cpp  ActDraw.cpp  ActEvent.cpp  ActEventData.cpp  ActEventPlus.cpp  ActGlobals.cpp  ActHit.cpp  ActKinematics.cpp  ActLegacy.cpp  ActLine.cpp  ActRANSAC.cpp  ActRoot.cpp  ActRootLinkDef.h  ActRunManager.cpp  ActSRIM.cpp  ActSample.cpp  ActStructs.cpp  ActTrack.cpp  ActTrackGeometry.cpp  ActTrackPlus.cpp  ActUtils.cpp  Silicons.cpp  SimBeam.cpp  SimCrossSection.cpp  SimKinematics.cpp  SimSRIM.cpp  SimStructs.cpp
(+10 files in other folders)
